[project]
name = "st-resnet-crowd-flow"
version = "0.1.0"
description = "Modernized Deep Spatio-Temporal Residual Networks for crowd flow prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "tables>=3.8.0",      
    "joblib>=1.3.0",
    "numexpr>=2.8.0",
    "packaging>=23.0",
    "tqdm>=4.65.0",
]
[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]